# kedro-dagster

./: .copier-answers.yml  .editorconfig  .git-cliff.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASE.md  justfile  mkdocs.yml  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  feature_request.yml
.github/prompts/: harmonize-with-azureml.prompt.md  harmonize-with-dagster.prompt.md
.github/workflows/: changelog.yml  nightly.yml  publish-release.yml  tests-os-coverage.yml  tests-versions.yml  tests.yml
docs/: hooks.py  index.md
docs/javascripts/: readthedocs.js
docs/material/overrides/: api-submodule.html
docs/pages/: contributing.md  example.md  faq.md  getting-started.md  guide.md  intro.md  user-guide.md
docs/pages/explanation/: architecture.md  concepts.md  data-flow.md  hook-lifecycle.md  index.md
docs/pages/how-to/: configure-executors.md  configure-logging.md  contribute.md  contributing.md  deploy-to-production.md  index.md  integrate-mlflow.md  troubleshoot.md  troubleshooting.md  use-mlflow.md  use-partitions.md
docs/pages/reference/: api.md  cli.md  configuration.md  datasets.md  index.md
docs/pages/tutorials/: example-project.md  getting-started.md  index.md  migrate-existing-project.md
docs/stylesheets/: theme.css
src/kedro_dagster/: __init__.py  catalog.py  cli.py  constants.py  dagster.py  kedro.py  logging.py  nodes.py  pipelines.py  translator.py  utils.py
src/kedro_dagster/cli/: __init__.py  commands.py  functions.py
src/kedro_dagster/config/: __init__.py  automation.py  execution.py  job.py  kedro_dagster.py  logging.py  models.py
src/kedro_dagster/datasets/: __init__.py  nothing_dataset.py  partitioned_dataset.py
src/kedro_dagster/templates/: definitions.py
tests/: test_catalog.py  test_cli.py  test_dagster.py  test_dagster_creators.py  test_hooks_integration.py  test_kedro.py  test_logging.py  test_mlflow_integration.py  test_node_translator.py  test_partition_mappings.py  test_pipeline_partition_logic.py  test_pipeline_translator.py  test_pipelines.py  test_project_translator_integration.py  test_quickstart_scenario.py  test_utils.py
tests/config/: test_config_models.py  test_get_dagster_config_integration.py
tests/datasets/: test_nothing_dataset.py
tests/templates/: test_templates.py
