[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs>=0.4",
  "hatchling>=1.25",
]

[project]
name = "kedro-dagster"
dynamic = ["version"]
authors = [
  { name = "Guillaume Tauzin", email = "gtauzin@stateful-y.io" },
]
maintainers = [
  { name = "Guillaume Tauzin", email = "gtauzin@stateful-y.io" }
]
description = "Kedro-Dagster makes it easy to deploy Kedro projects to Dagster"
license = "Apache-2.0"
readme.content-type = "text/markdown"
readme.file = "README.md"
requires-python = ">=3.10, <3.14"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
urls."Bug Tracker" = "https://github.com/stateful-y/kedro-dagster/issues"
urls."Changelog" = "https://github.com/stateful-y/kedro-dagster/releases"
urls.Documentation = "https://github.com/stateful-y/kedro-dagster/"
urls."Source Code" = "https://github.com/stateful-y/kedro-dagster"
dependencies = [
    "kedro>=0.19,<2.0",
    "kedro-datasets",
    "dagster>=1.10,<2.0",
    "dagster-webserver",
    "dagster-dg-cli",
    "pydantic>=1.0.0,<3.0.0",
]

[project.optional-dependencies]
mlflow = [
  "kedro-mlflow>=0.13",
  "mlflow>=2.20",
  "dagster-mlflow",
]

[dependency-groups]
dev = [
  { include-group = "docs" },
  { include-group = "tests" },
  { include-group = "fix" },
]
docs = [
  "mkdocs-material==9.7.5",
  "mkdocs-git-revision-date-localized-plugin==1.5.1",
  "mkdocstrings==1.0.3",
  "mkdocstrings-python==2.0.3",
  "mkdocs-glightbox==0.5.2",
  "pymdown-extensions==10.21",
  "black==26.3.0",
]
fix = [
  "pre-commit-uv>=4.1",
]
tests = [
  "pytest>=8.3",
  "pytest-mock>=3.14",
  "pytest-cov>=7.0",
  "covdefaults>=2.3",
  "psutil>=6.1",
  "pyaml>=25.1",
  "pandas>=2.3",
]

[project.entry-points."kedro.project_commands"]
dagster = "kedro_dagster.cli:commands"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.metadata.hooks.vcs.urls]
source_archive = "https://github.com/stateful-y/kedro-dagster/archive/{commit_hash}.zip"

[tool.ruff]
line-length = 120
show-fixes = true

[tool.ruff.format]
preview = true
docstring-code-format = true
docstring-code-line-length = 100

[tool.ruff.lint]
exclude = ["docs/**", "features/**"]
# all rules can be found here: https://beta.ruff.rs/docs/rules/
select = [
    "F",   # Pyflakes
    "W",   # pycodestyle
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # Pylint
    "T201", # Print Statement
]
ignore=[
    "E203", # space before : (needed for how black formats slicing)
    "E731", # do not assign a lambda expression, use a def
    "E741", # do not use variables named 'l', 'O', or 'I'
    "E501", # ruff format takes care of line-too-long
    "PLR0913", # too many args in func def
    "PLR0915", # too many statements
    "PLR0912", # too many branches
    "PLR2004", # magic value used in comparison
]

[tool.ruff.lint.per-file-ignores]
# It's fine not to put the import at the top of the file in the examples
# folder.
"examples/*"=["E402"]

[tool.pytest.ini_options]
addopts = "--color=yes"
doctest_optionflags = "NORMALIZE_WHITESPACE"
norecursedirs = "src/kedro_dagster/templates"
filterwarnings = [
  # Ignore all Pydantic v2 deprecation warnings during tests
  "ignore::pydantic.warnings.PydanticDeprecatedSince20",
  "ignore::pydantic.warnings.PydanticDeprecatedSince212",
  # Silence Kedro framework warnings about missing pipelines in test scenarios
  "ignore:Your project does not contain any pipelines with nodes:UserWarning:kedro.framework.cli.starters",
  # Ignore dagster-mlflow BetaWarning
  "ignore:Function `_create_mlflow_run_hook` is currently in beta:dagster.BetaWarning:dagster_mlflow.hooks",
  # Ignore pluggy `run_result` UserWarning
  "ignore:Argument\\(s\\) 'run_result' which are declared in the hookspec cannot be found in this hook call:UserWarning",
]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
disable_error_code = ["misc", "import-untyped"]

[tool.coverage]
paths.source = ["src/kedro_dagster"]
report.fail_under = 1
report.include_namespace_packages = true
report.skip_covered = false
html.show_contexts = true
run.omit = [
    "src/templates/definitions.py",
    "tests/*",
    "*/tests/*",
]
run.parallel = true
run.branch = true
run.sigterm = true
run.concurrency = ["multiprocessing"]
run.plugins = [
  "covdefaults",
]
