[project]
name = "kedro_dagster"
dynamic = ["version"]
description = "Kedro-Dagster makes it easy to deploy Kedro projects to Dagster"
readme = "README.md"
maintainers = [
    { name = "Guillaume Tauzin", email = "gtauzin@stateful-y.io" }
]
authors = [
    { name = "Guillaume Tauzin", email = "gtauzin@stateful-y.io" }
]
license = { text = "Apache-2.0" }
requires-python = ">=3.11,<3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "kedro>=1.0.0",
    "kedro-datasets>=1.0.0",
    "dagster>=1.10,<2.0",
    "dagster-webserver",
    "dagster-dg-cli",
    "pydantic>=2.0.0",
    "cachetools>=4.1",
]

# [ADDITION] project-specific optional dependency
[project.optional-dependencies]
mlflow = [
    "kedro-mlflow>=0.13",
    "mlflow>=2.20",
    "dagster-mlflow",
]

[dependency-groups]
dev = [
    {include-group = "tests"},
    {include-group = "lint"},
    {include-group = "docs"},
    {include-group = "fix"},
    "interrogate>=1.7.0",
]
tests = [
    "pytest>=8.3",
    "pytest-cov>=7.0",
    "pytest-mock>=3.14",
    "pytest-xdist>=3.8",
    "covdefaults>=2.3",
    "hypothesis>=6.100",
    "psutil>=6.1",
    "pyaml>=25.1",
    "pandas>=2.3",
]
lint = [
    "ruff>=0.8.0",
    "ty>=0.0.12",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-autorefs>=1.0",
    "mkdocs-material>=9.7",
    "mkdocstrings[python]>=0.26.0",
    "pymdown-extensions>=10.20.1",
    "mkdocs-glightbox>=0.5",
]
fix = [
    "pre-commit-uv>=4.1",
]

# [ADDITION] Kedro CLI plugin registration
[project.entry-points."kedro.project_commands"]
dagster = "kedro_dagster.cli.commands:commands"

[project.urls]
Homepage = "https://github.com/stateful-y/kedro-dagster"
Documentation = "https://kedro-dagster.readthedocs.io"
Repository = "https://github.com/stateful-y/kedro-dagster"
"Bug Tracker" = "https://github.com/stateful-y/kedro-dagster/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kedro_dagster"]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/kedro_dagster/_version.py"

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]
show-fixes = true
exclude = ["src/kedro_dagster/_version.py"]

[tool.ruff.format]
preview = true
docstring-code-format = true
docstring-code-line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "PL",  # Pylint
    "T201", # Print statement
]
ignore = [
    "E203",   # space before : (needed for how black formats slicing)
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "PLC0415", # import not at top-level (lazy imports are intentional)
    "SIM102",  # collapsible if (clarity over brevity)
    "SIM105",  # contextlib.suppress (comments on except clauses preferred)
    "PLR0913", # too many args in func def
    "PLR0915", # too many statements
    "PLR0912", # too many branches
    "PLR2004", # magic value used in comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ARG", "S101", "T201", "PLR2004"]  # Allow assert statements, prints, and magic values in tests
"docs/**/*" = ["T201", "ARG001", "PLW0603", "SIM105", "SIM108"]  # Allow prints, unused args, globals, and simplifiable patterns in documentation hooks

[tool.ruff.lint.isort]
known-first-party = ["kedro_dagster"]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 100
exclude = ["setup.py", "docs", "build", "tests", "*_version.py"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false

[tool.ty.rules]
# Gradually adopt ty: demote noisy rules to warnings while the codebase is adapted
unresolved-attribute = "warn"
unresolved-import = "warn"
invalid-assignment = "warn"
invalid-argument-type = "warn"
invalid-parameter-default = "warn"
not-subscriptable = "warn"
no-matching-overload = "warn"
invalid-return-type = "warn"
invalid-method-override = "warn"
call-non-callable = "warn"
unsupported-operator = "warn"
missing-argument = "warn"
invalid-type-form = "warn"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--color=yes",
    "--cov=kedro_dagster",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "integration: marks tests as integration tests that run subprocesses (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
doctest_optionflags = "NORMALIZE_WHITESPACE"
# [ADDITION] project-specific pytest config
norecursedirs = "src/kedro_dagster/templates"
filterwarnings = [
    # Ignore all Pydantic v2 deprecation warnings during tests
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
    "ignore::pydantic.warnings.PydanticDeprecatedSince212",
    # Silence Kedro framework warnings about missing pipelines in test scenarios
    "ignore:Your project does not contain any pipelines with nodes:UserWarning:kedro.framework.cli.starters",
    # Ignore dagster-mlflow BetaWarning
    "ignore:Function `_create_mlflow_run_hook` is currently in beta:dagster.BetaWarning:dagster_mlflow.hooks",
    # Ignore pluggy `run_result` UserWarning
    "ignore:Argument\\(s\\) 'run_result' which are declared in the hookspec cannot be found in this hook call:UserWarning",
]

[tool.coverage.paths]
source = ["src/kedro_dagster"]

[tool.coverage.run]
source = ["kedro_dagster"]
branch = true
parallel = true
sigterm = true
concurrency = ["multiprocessing"]
plugins = ["covdefaults"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/_version.py",
    "src/templates/definitions.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 1
include_namespace_packages = true

[tool.coverage.html]

[tool.commitizen]
name = "cz_conventional_commits"
version_scheme = "semver"
version_provider = "scm"
update_changelog_on_bump = false
major_version_zero = true
tag_format = "v$version"

[tool.rumdl]
flavor = "mkdocs"
line-length = 120
disable = [
    "MD012",  # Multiple consecutive blank lines (common in generated content)
    "MD013",  # Line length (handled by formatter, many long URLs/tables)
    "MD022",  # Heading blank lines (varies by document style)
    "MD031",  # No blank line before fenced code block
    "MD032",  # List should be preceded by blank line
    "MD033",  # Inline HTML (needed for README logo, MkDocs grid cards)
    "MD034",  # URL/email without angle brackets
    "MD045",  # Image missing alt text (logos use empty alt intentionally)
    "MD046",  # Code block style (indented blocks required inside MkDocs tabs)
    "MD051",  # Link fragments (cross-doc references resolved at MkDocs build time)
]
exclude = ["CHANGELOG.md", "site", "htmlcov", ".nox", ".venv"]

[tool.rumdl.per-file-ignores]
".github/PULL_REQUEST_TEMPLATE.md" = ["MD041"]  # PR template starts with checklist
".github/skills/**" = ["MD007"]  # Nested lists in skill files use variable indent
"README.md" = ["MD041"]  # README starts with logo, not heading
"docs/index.md" = ["MD041"]  # Landing page starts with logo, not heading
"CONTRIBUTING.md" = ["MD057"]  # Relative link to docs/ is valid at project level
"docs/pages/tutorials/*.md" = ["MD057"]  # Links to auto-generated API docs (docs/pages/api/ is gitignored)
"docs/pages/how-to/*.md" = ["MD057"]  # Links to auto-generated API docs (docs/pages/api/ is gitignored)
"docs/pages/explanation/*.md" = ["MD057"]  # Links to auto-generated API docs (docs/pages/api/ is gitignored)
"docs/pages/reference/*.md" = ["MD057"]  # Links to auto-generated API docs (docs/pages/api/ is gitignored)
